# aigo-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TESTING_QUICK_REFERENCE.md  VALIDATION_SUMMARY.md  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  test_results_strategy.json
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_users_table.py  003_add_user_preferences.py  add_itinerary_data_field.py  add_replan_version_fields.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: router.py
app/core/: __init__.py  auth.py  config.py  deps.py  exceptions.py  security.py
app/domains/: __init__.py
app/domains/itinerary/: __init__.py  models.py  repository.py  schemas.py  services.py  tasks.py
app/domains/shared/: __init__.py  repository.py  specifications.py
app/domains/user/: __init__.py  (+7 more)
app/infra/: __init__.py  celery_app.py  database.py  redis.py  task_progress.py
docs/: CHAT_API_SPECIFICATION.md  COMPREHENSIVE_TEST_PROMPTS.md  END_TO_END_TEST_RESULTS.md  IMPLEMENTATION_SUMMARY_TESTING.md  README.md  REAL_API_KEY_TEST_RESULTS.md  TESTING_GUIDE.md  TRIP_PLANNING_STRATEGY_IMPLEMENTATION.md  TRIP_PLANNING_STRATEGY_TEST.md  WEATHER_API.md  WEATHER_API_IMPLEMENTATION_SUMMARY.md  WEATHER_API_INTEGRATION_VERIFICATION.md  WEATHER_ITINERARY_GENERATE_TESTS.md
scripts/: README_STRATEGY_TEST.md  check_hotel.py  demo_weather_forecast.py  docker-quick-start.sh  init-db.sql  quick-start.sh  quick_booking_test.py  quick_e2e_test.py  run_all_tests.py  setup-db.sh  start-celery.sh  test_api_sync.py  test_context.py  test_conversation_loop.py  test_full_api.py  test_full_itinerary_mcp_tools.py  test_google_image_search.py  test_itinerary_booking_options.py  test_itinerary_generate_weather.py  test_trip_planning_strategy.py  test_weather_api.py
tests/domains/: __init__.py
(+32 files in other folders)
